unpackaged/main/default/objects/Help_Guide_Draft__c/Help_Guide_Draft__c.object-meta.xml
<CustomObject>
    <description>Editable draft behind the Help Guide Builder. Published to Help_Guide__mdt / Help_Guide_Node__mdt / Help_Guide_Option__mdt via the Apex Metadata API by HelpGuideAdminController.publish().</description>
    <label>Help Guide Draft</label>
    <nameField>
        <label>Guide Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Guide Drafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>