unpackaged/main/default/objects/Help_Guide_Draft__c/fields/Guide_Key__c.field-meta.xml
<CustomField>
    <fullName>Guide_Key__c</fullName>
    <externalId>true</externalId>
    <label>Guide Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>