unpackaged/main/default/objects/Help_Guide_Draft__c/fields/Publish_Error__c.field-meta.xml
<CustomField>
    <fullName>Publish_Error__c</fullName>
    <label>Publish Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>