unpackaged/main/default/objects/Help_Guide_Draft__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>